# soteria

./: .gitignore  README.md  pyproject.toml
src/soteria/: __init__.py  __main__.py  app.py  cli.py  coinbase.py  collector.py  config.py  features.py  metrics.py  ml.py  models.py  orderbook.py  render.py
tests/: test_cli.py  test_coinbase_messages.py  test_features.py  test_metrics.py  test_ml.py  test_orderbook.py
